# lidar_camera_calibration

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: humble.yml  kinetic.yml  main.yml  melodic.yml  noetic.yml
aruco_mapping/: CMakeLists.txt
aruco_mapping/include/: aruco_mapping.h
aruco_mapping/msg/: ArucoMarker.msg
aruco_mapping/src/: aruco_mapping.cpp
aruco_ros/aruco_ros/: CMakeLists.txt
aruco_ros/aruco_ros/src/: aruco_ros_utils.cpp  simple_double.cpp
conf/: config_file.txt  lidar_camera_calibration.yaml  marker_coordinates.txt  points.txt  transform.txt
cross_sensor_calibration/: package.xml
cross_sensor_calibration/conf/: config_file.txt  points.txt
cross_sensor_calibration/include/cross_sensor_calibration/: Corners.h  Utils.h
cross_sensor_calibration/launch/: find_velodyne_points.launch
cross_sensor_calibration/src/: find_velodyne_points.cpp
dependencies/aruco_mapping/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
dependencies/aruco_mapping/data/: geniusF100.ini  ost.ini  ptgrey.ini  zed_left_uurmi.ini
dependencies/aruco_mapping/include/: aruco_mapping.h
dependencies/aruco_mapping/launch/: aruco_config.rviz  aruco_mapping.launch
dependencies/aruco_mapping/src/: aruco_mapping.cpp  main.cpp
dependencies/aruco_ros/: README.md
dependencies/aruco_ros/aruco/: CHANGELOG.rst  CMakeLists.txt  package.xml
dependencies/aruco_ros/aruco/include/aruco/: aruco.h  arucofidmarkers.h  board.h  boarddetector.h  cameraparameters.h  cvdrawingutils.h  marker.h  markerdetector.h
dependencies/aruco_ros/aruco/src/aruco/: aruco_selectoptimalmarkers.cpp  arucofidmarkers.cpp  board.cpp  boarddetector.cpp  cameraparameters.cpp  cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
dependencies/aruco_ros/aruco_msgs/: CHANGELOG.rst  package.xml
dependencies/aruco_ros/aruco_msgs/msg/: MarkerArray.msg
dependencies/aruco_ros/aruco_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
dependencies/aruco_ros/aruco_ros/cfg/: ArucoThreshold.cfg
dependencies/aruco_ros/aruco_ros/include/aruco_ros/: aruco_ros_utils.h
dependencies/aruco_ros/aruco_ros/launch/: double.launch  marker_publisher.launch  single.launch
dependencies/aruco_ros/aruco_ros/src/: aruco_ros_utils.cpp  marker_publish.cpp  simple_double.cpp  simple_single.cpp
dependencies/aruco_ros_old/aruco/src/aruco/: board.cpp  cvdrawingutils.cpp  marker.cpp
dependencies/aruco_ros_old/aruco_msgs/: CMakeLists.txt
dependencies/aruco_ros_old/aruco_msgs/msg/: Marker.msg
include/lidar_camera_calibration/: Corners.h  Find_RT.h  PreprocessUtils.h  Utils.h
launch/: find_transform.launch
lidar_camera_calibration/: CMakeLists.txt  package.xml
lidar_camera_calibration/conf/: cross_sensor_calibration.yaml  transform.txt
lidar_camera_calibration/include/cross_sensor_calibration/: Find_RT.h  PreprocessUtils.h
lidar_camera_calibration/include/lidar_camera_calibration/: Find_RT.h  PreprocessUtils.h
lidar_camera_calibration/src/: Corners.cpp  find_velodyne_points.cpp
log/: avg_values.txt
msg/: marker_6dof.msg
pointcloud_fusion/: CMakeLists.txt  README.md  fusion.cpp
pointcloud_fusion/data/: rts.txt
src/: Corners.cpp  find_velodyne_points.cpp
