<?xml version="1.0"?>
<package>
  <name>cross_sensor_calibration</name>
  <description>
     ROS package to find a rigid-body transformation between a LiDAR and a camera
  </description>
  <version>0.0.1</version>
  <maintainer email="noemail@e.mail">Ankit Dhall, Kunal Chelani, Vishnu R.</maintainer>
  <license>LGPL</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>pcl_ros</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
