<?xml version="1.0"?>
<package format="2">
  <name>aruco_msgs</name>
  <version>0.2.4</version>
  <description>The aruco_msgs package</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
